test/shouldPass/expr/notBool.pas
program Sample;
var
  i : boolean;

begin
  i := not true;
  writeln(i);
end.
