test/shouldFail/expr/unMinusStr.pas
program Sample;
var
  i : string;

begin
  i := - 'ab';
//     ^^^^^^
// Unary operator '-' cannot be applied to string
end.
